AC_INIT([stim], [0.4], [stim-bugs@geekfactor.com])

dnl Switch to a C++ compiler, and check if it works
AC_LANG(C++)
AC_PROG_CXX

dnl verifies at least one source file is where it should be
AC_CONFIG_SRCDIR([stim.hh])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

dnl AC_OUTPUT(Makefile)
AC_OUTPUT

